# rag_agent

./: .gitignore  README.md  pyproject.toml
agentic_system/agents/: rag_agent.py
agentic_system/config/: prompts.py  settings.py
agentic_system/graph/: rag_graph.py
agentic_system/memory/: conversation_memory.py
agentic_system/retrievers/: sql_retriever.py  vector_retriever.py
agentic_system/tools/: rag_tools.py
backend/: .env.example  main.py  requirements.txt
backend/api/routes/: chat.py  health.py  ingest.py
backend/core/: config.py  database.py  logging.py
backend/services/: ingest_service.py
backend/utils/: chunker.py  file_parser.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx
frontend/src/components/sidebar/: Sidebar.tsx
frontend/src/services/: api.ts
frontend/src/store/: chatStore.ts
frontend/src/types/: index.ts
